take added lines into account when replacing a pattern with newline(s)

BUG: 129494

svn path=/trunk/KDE/kdelibs/kate/; revision=1090796